@@ -1,6 +1,8 @@
 
 CHANGES IN FLTK 1.3.1
 
+	- Fixed regression (in FLTK 1.3.0) that could clear a radio
+	  button by using the keyboard (space or shortcut) (STR #2748)
 	- Fixed fl_pie() drawing too small on X11 (STR #2703)
 	- Fixed Fl_Menu issue with unusual menu flags (STR #2680)
 	- Fixed Windows DLL import of fl_xid() (STR #2670)
